--- a/time_series_forecasting/notebooks/dataset_2_store_sales/0_preproc.ipynb
+++ b/time_series_forecasting/notebooks/dataset_2_store_sales/0_preproc.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/dataset_2_store_sales\n"
+      "/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/notebooks/dataset_2_store_sales\n"
      ]
     }
    ],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,27 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "## https://www.kaggle.com/competitions/store-sales-time-series-forecasting/data\n",
     "\n",
-    "holidays = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/dataset_2_store_sales/dataset/holidays_events.csv\") \n",
-    "oil = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/dataset_2_store_sales/dataset/oil.csv\")\n",
-    "stores = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/dataset_2_store_sales/dataset/stores.csv\")\n",
-    "transactions = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/dataset_2_store_sales/dataset/transactions.csv\")\n",
+    "holidays = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/notebooks/dataset_2_store_sales/dataset/holidays_events.csv\") \n",
+    "oil = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/notebooks/dataset_2_store_sales/dataset/oil.csv\")\n",
+    "stores = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/notebooks/dataset_2_store_sales/dataset/stores.csv\")\n",
+    "transactions = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/notebooks/dataset_2_store_sales/dataset/transactions.csv\")\n",
+    "#test_df = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/dataset_2_store_sales/dataset/test.csv\")\n",
     "\n",
-    "test_df = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/dataset_2_store_sales/dataset/test.csv\")\n",
-    "\n",
-    "merged_df = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/dataset_2_store_sales/dataset/train.csv\")\n",
+    "#train_df = pd.read_csv(\"/Users/cozmaeug/Private/IST PG - DS/DaSH ENG/ist_dash_2024_rec/time_series_forecasting/dataset_2_store_sales/dataset/train.csv\")\n",
     "\n",
     "file_tag = \"Ecuadorian Store Sales\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +175,7 @@
        "4        False  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +270,7 @@
        "4 2013-01-07       93.20"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +386,7 @@
        "4          5  Santo Domingo  Santo Domingo de los Tsachilas    D        4"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +487,7 @@
        "4 2013-01-02          4          1922"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +591,7 @@
        "4   4 2013-01-01          1       BOOKS    0.0            0"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +689,7 @@
        "4  3000892 2017-08-16          1       BOOKS            0"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +873,7 @@
        "4           25           770  "
       ]
      },
-     "execution_count": 155,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -897,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1388,7 +1387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1407,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1442,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1527,6 +1526,35 @@
    "metadata": {},
    "source": [
     "## Daily"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Only valid with DatetimeIndex, TimedeltaIndex or PeriodIndex, but got an instance of 'RangeIndex'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m daily_sales \u001b[38;5;241m=\u001b[39m train_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msales\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mresample(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39msum()\n\u001b[1;32m      2\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n\u001b[1;32m      3\u001b[0m daily_sales\u001b[38;5;241m.\u001b[39mplot(title\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile_tag\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m | Daily Sales Over Time\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/generic.py:9771\u001b[0m, in \u001b[0;36mNDFrame.resample\u001b[0;34m(self, rule, axis, closed, label, convention, kind, on, level, origin, offset, group_keys)\u001b[0m\n\u001b[1;32m   9768\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   9769\u001b[0m     convention \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstart\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m-> 9771\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m get_resampler(\n\u001b[1;32m   9772\u001b[0m     cast(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSeries | DataFrame\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mself\u001b[39m),\n\u001b[1;32m   9773\u001b[0m     freq\u001b[38;5;241m=\u001b[39mrule,\n\u001b[1;32m   9774\u001b[0m     label\u001b[38;5;241m=\u001b[39mlabel,\n\u001b[1;32m   9775\u001b[0m     closed\u001b[38;5;241m=\u001b[39mclosed,\n\u001b[1;32m   9776\u001b[0m     axis\u001b[38;5;241m=\u001b[39maxis,\n\u001b[1;32m   9777\u001b[0m     kind\u001b[38;5;241m=\u001b[39mkind,\n\u001b[1;32m   9778\u001b[0m     convention\u001b[38;5;241m=\u001b[39mconvention,\n\u001b[1;32m   9779\u001b[0m     key\u001b[38;5;241m=\u001b[39mon,\n\u001b[1;32m   9780\u001b[0m     level\u001b[38;5;241m=\u001b[39mlevel,\n\u001b[1;32m   9781\u001b[0m     origin\u001b[38;5;241m=\u001b[39morigin,\n\u001b[1;32m   9782\u001b[0m     offset\u001b[38;5;241m=\u001b[39moffset,\n\u001b[1;32m   9783\u001b[0m     group_keys\u001b[38;5;241m=\u001b[39mgroup_keys,\n\u001b[1;32m   9784\u001b[0m )\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/resample.py:2050\u001b[0m, in \u001b[0;36mget_resampler\u001b[0;34m(obj, kind, **kwds)\u001b[0m\n\u001b[1;32m   2046\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   2047\u001b[0m \u001b[38;5;124;03mCreate a TimeGrouper and return our resampler.\u001b[39;00m\n\u001b[1;32m   2048\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m   2049\u001b[0m tg \u001b[38;5;241m=\u001b[39m TimeGrouper(obj, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)  \u001b[38;5;66;03m# type: ignore[arg-type]\u001b[39;00m\n\u001b[0;32m-> 2050\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m tg\u001b[38;5;241m.\u001b[39m_get_resampler(obj, kind\u001b[38;5;241m=\u001b[39mkind)\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/resample.py:2272\u001b[0m, in \u001b[0;36mTimeGrouper._get_resampler\u001b[0;34m(self, obj, kind)\u001b[0m\n\u001b[1;32m   2263\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(ax, TimedeltaIndex):\n\u001b[1;32m   2264\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m TimedeltaIndexResampler(\n\u001b[1;32m   2265\u001b[0m         obj,\n\u001b[1;32m   2266\u001b[0m         timegrouper\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   2269\u001b[0m         gpr_index\u001b[38;5;241m=\u001b[39max,\n\u001b[1;32m   2270\u001b[0m     )\n\u001b[0;32m-> 2272\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m   2273\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOnly valid with DatetimeIndex, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   2274\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTimedeltaIndex or PeriodIndex, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   2275\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbut got an instance of \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(ax)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   2276\u001b[0m )\n",
+      "\u001b[0;31mTypeError\u001b[0m: Only valid with DatetimeIndex, TimedeltaIndex or PeriodIndex, but got an instance of 'RangeIndex'"
+     ]
+    }
+   ],
+   "source": [
+    "daily_sales = train_df['sales'].resample('D').sum()\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "daily_sales.plot(title=f\"{file_tag} | Daily Sales Over Time\")\n",
+    "plt.xlabel('Date')\n",
+    "plt.ylabel('Sales')\n",
+    "plt.show()"
    ]
   },
   {
